infra/kustomize/core/base/istio/overlays/dev/ingress-gateway-patch.yml
################################
# Ingress (Istio)
#################################
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: dummy
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - www.lratg-dev.com
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ingress-gateway-credential
    hosts:
    - www.lratg-dev.com
